--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Game lodge, holiday resort with plenty of outdoor activities">
     <meta name="keywords" contents="game lodge, lodge, game drive, hiking, swimming canoeing, outdoor, accomodation, hotel">
+    <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
